# CrudeOil

./: .gitignore  L  README.md  setup.cfg
.github/workflows/: deploy.yml
DOCS/: README.md
examples/test1/: serv.py
examples/test2/: README.md  serv.py
examples/test2/templates/: index.html  sse_page.html
examples/test3/: README.md  a.py  b.py  serv.py
