[metadata]
name = crudeoil
version = 0.0.1
description = CrudeOil is a wrapper around python socket server.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ashish V Nair
license = MIT
license_file = LICENSE
platform = linux
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages =
    crudeoil
install_requires =
    requests>=2.22.0
    Jinja2>=2.10.1
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
crudeoil = py.typed
